laboratory is updated

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <li><a href="index.html" class="active"><i class="fas fa-home"></i> Asosiy</a></li>
             <li><a href="lectures.html"><i class="fas fa-book"></i> Maruzalar</a></li>
             <li><a href="tests.html"><i class="fas fa-tasks"></i> Testlar</a></li>
-            <li><a href="laboratory.html"><i class="fas fa-flask"></i> Laboratoriya</a></li>
+            <li><a href="laboratory2.html"><i class="fas fa-flask"></i> Laboratoriya</a></li>
         </ul>
     </nav>
 <br>
@@ -52,7 +52,7 @@
 
             <div class="cta-buttons">
                 <a href="lectures.html" class="btn primary">Maruzalarni Boshlash</a>
-                <a href="laboratory.html" class="btn secondary">Laboratoriyaga O'tish</a>
+                <a href="laboratory2.html" class="btn secondary">Laboratoriyaga O'tish</a>
             </div>
         </div>
     </main>
