--- a/lecture6.html
+++ b/lecture6.html
@@ -24,7 +24,7 @@
             <li><a href="index.html"><i class="fas fa-home"></i> Asosiy</a></li>
             <li><a href="lectures.html" class="active"><i class="fas fa-book"></i> Maruzalar</a></li>
             <li><a href="tests.html"><i class="fas fa-tasks"></i> Testlar</a></li>
-            <li><a href="laboratory.html"><i class="fas fa-flask"></i> Laboratoriya</a></li>
+            <li><a href="laboratory2.html"><i class="fas fa-flask"></i> Laboratoriya</a></li>
         </ul>
     </nav>
     <br><br><br><br>
@@ -52,7 +52,7 @@
                     <button class="btn-next" disabled>Keyingi <i class="fas fa-chevron-right"></i></button>
                 </div>
             </nav>
-
+            <br><br>
             <article class="lecture-article">
                 <h1>Ma'lumotlar Optimizatsiyasi</h1>
                 
