--- a/lectures.html
+++ b/lectures.html
@@ -23,7 +23,7 @@
             <li><a href="index.html"><i class="fas fa-home"></i> Asosiy</a></li>
             <li><a href="lectures.html" class="active"><i class="fas fa-book"></i> Maruzalar</a></li>
             <li><a href="tests.html"><i class="fas fa-tasks"></i> Testlar</a></li>
-            <li><a href="laboratory.html"><i class="fas fa-flask"></i> Laboratoriya</a></li>
+            <li><a href="laboratory2.html"><i class="fas fa-flask"></i> Laboratoriya</a></li>
         </ul>
     </nav>
     <br>
